<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_About"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/About" />

    <item
        android:id="@+id/navigation_Photos"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/Photos" />

    <item
        android:id="@+id/navigation_Home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/Home" />

    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/title_share" />

    <item
        android:id="@+id/navigation_Location"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/Location" />

</menu>
